--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alura Plus</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section class="principal">
+    <section class="container principal">
     <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
     <img src="Group.png" alt="Grupo">
     </section>
-
-
-
-
+    <section class="container secundario">
+        <h2>Assista do seu jeito</h2>
+        <p>Aproveite a tela grande da TV ou 
+        assista no tablet, laptop, celular e
+        outros aparelhos. Nossa seleção de 
+        cursos não para de crescer.</p>
+    </section>
 </body>
 </html>
